--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "this is my first react project",
   "main": "index.js",
   "scripts": {
+    "start":"parcel index.html",
+    "build":"parcel build index.html",
     "test": "jest"
   },
   "repository": {
