--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "events": "^3.3.0",
     "https-browserify": "^1.0.0",
     "parcel": "^2.10.2",
+    "postcss": "^8.4.31",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
+    "tailwindcss": "^3.3.5",
     "url": "^0.11.3",
     "util": "^0.12.5"
   },
