--- a/package.json
+++ b/package.json
@@ -37,8 +37,13 @@
     "util": "^0.12.5"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.1",
     "react": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
     "start": "^5.1.0"
   }
