--- a/package.json
+++ b/package.json
@@ -22,11 +22,19 @@
   },
   "homepage": "https://github.com/Ruchhit/namu#readme",
   "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
     "assert": "^2.1.0",
+    "babel-jest": "^29.7.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
     "https-browserify": "^1.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.10.2",
     "postcss": "^8.4.31",
     "process": "^0.11.10",
